--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@netlify/plugin-nextjs": "^1.0.5",
     "@react-hook/window-scroll": "^1.3.0",
     "classnames": "^2.2.6",
     "gray-matter": "^4.0.2",
