--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "remark": "^13.0.0",
     "remark-html": "^13.0.1",
     "sass": "^1.32.0"
+  },
+  "devDependencies": {
+    "critters": "0.0.6"
   }
 }
