--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,6 @@
 [build]
-  command   = "npm run build"
-  functions = "out_functions"
-  publish   = "out_publish"
+  command   = "next build"
+  publish   = "out"
+
+[[plugins]]
+  package = "@netlify/plugin-nextjs"
