--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "postbuild": "next-on-netlify"
+    "export": "next export"
   },
   "dependencies": {
     "@react-hook/window-scroll": "^1.3.0",
