--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "classnames": "^2.2.6",
     "gray-matter": "^4.0.2",
     "next": "10.0.4",
+    "next-pwa": "^5.0.2",
     "react": "17.0.1",
     "react-delay-link": "^1.1.4",
     "react-dom": "17.0.1",
